Make cursor pointer when hovering tool bar
Make cursor pointer when hovering tool bar.

--- a/css/common.css
+++ b/css/common.css
@@ -27,12 +27,11 @@
         font-size: 1.25em;
         color: #0F7562;
     }
-
-
 }
 
 a {
     text-decoration: none;
+    display: block;
     color: black;
 }
 
